# wch-workshop

./: .env  .gitignore  .webui_secret_key  README.md  main.py  pyproject.toml  setup.py
00_tokenizer/: 00_tokenizer.py
01_pretraining/: 00_base-model.py  01_data-preparation.py  02_packaging-data.py  02_packing-data.py  03_model-initialization.py  04_training-run.py  05_adapter.py  README.md
01_pretraining/dataset/: ex-data-quality.txt  profile-th.txt
02_finetuning/: 00_convert-data.py  00_tree-of-thoughts-isan.py  01_training-run-isan.py  01_training-run.py  02_inference.py  02_instruction-tuning.py  02_tree-of-thoughts-isan.py  03_instruction-tuning.py  README.md  data-preparation.py
02_finetuning/data/dataset/: valid.jsonl
03_prompt-engineering/: 01_zero-shot.py  02_few-shot.py  03_chain-of-thought.py  04_majority-voting-cot.py  05_tree-of-thoughts.py  06_tree-of-thoughts-isan.py  README.md
04_local-llms/: README.md  start-server.py
05_rag/: 00_no_rag.py  01_parse_data.py  02_local_vector_store.py  03_inference.py  README.md
06_mcp/: 01_inference-isan.py  01_inference.py  README.md
06_mcp/servers /: set50.py
