[project]
name = "wch-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "mcp>=1.27.2",
    "mlx-lm>=0.31.3",
    "pypdf>=6.13.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "transformers>=5.10.2",
    "yfinance>=1.4.1",
]

# open-webui conflicts with pandas>=3.0.3 and transformers>=5.10.2
# Run separately with: uv tool run open-webui serve
